--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,24 +1,23 @@
 [package]
 name = "traefik_crowdsec_bouncer"
-version = "0.2.2"
+version = "0.2.3"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4"
-actix-rt = "2"
+actix-web = { version = "4.3" }
+actix-rt = { version = "2.8" }
 chrono = { version = "0.4", features = ["time"] }
-custom_error = "1.9"
-env_logger = "0.10"
-ip_network_table-deps-treebitmap = "0.5"
-log = "0.4"
-parse_duration = "2"
+custom_error = { version = "1.9" }
+env_logger = { version = "0.10" }
+ip_network_table-deps-treebitmap = { version = "0.5" }
+log = { version = "0.4" }
+parse_duration = { version = "2.1" }
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-url = "2.3"
+serde_json = { version = "1.0" }
+url = { version = "2.3" }
 
 [dev-dependencies]
-mockito = "1.0.2"
-tokio = { version = "1", features = ["full"] }
+mockito = { version = "1.0" }
