--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ url = { version = "2.5" }
 mockito = { version = "1.7" }
 criterion = { version = "0.5", features = ["async_tokio"] }
 tokio = { version = "1", features = ["full"] }
+serial_test = "3.2"
 
 [[bench]]
 name = "authentication"
